--- a/WebPresentacion/Web.config
+++ b/WebPresentacion/Web.config
@@ -17,7 +17,7 @@
     <httpRuntime targetFramework="4.5"/>
   </system.web>
   <connectionStrings>
-    <add name="conlocal" connectionString="Data Source=SARAH-AGUILAR\SQLEXPRESS; Initial Catalog=Biblioteca3; Integrated Security=true;"/>
+    <add name="conlocal" connectionString="Data Source=DESKTOP-93UDGQE\SQLEXPRESS2019; Initial Catalog=Biblioteca3; Integrated Security=true;"/>
   </connectionStrings>
   <system.codedom>
     <compilers>
